[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
itertools = "0.10.5"
num = "0.4.1"
parse-display = "0.8.2"
regex = "1.10.2"
